# infini-transformer-pytorch

./: README.md  pyproject.toml  setup.py  train.py
.github/workflows/: test.yml
infini_transformer_pytorch/: __init__.py  infini_transformer.py  wrapper.py
tests/: test_readme.py
