[project]
name = "infini-transformer-pytorch"
version = "0.1.6"
description = "Infini-Transformer in Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformers',
    'attention mechanism',
    'long context',
    'memory'
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
  ]

dependencies = [
    'einops>=0.8.0',
    'rotary-embedding-torch>=0.6.0',
    'torch>=2.0',
    'tqdm'
]

[project.urls]
Homepage = "https://pypi.org/project/infini-transformer-pytorch/"
Repository = "https://github.com/lucidrains/infini-transformer-pytorch"

[project.optional-dependencies]
examples = [
    "tqdm",
    "numpy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "pytest>=8.2.0",
]

[tool.ruff]
line-length = 1000
ignore-init-module-imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["infini_transformer_pytorch"]
